test/tests/bad/free-vars-in-alias.carth
;; FreeVarsInAlias

(type (Foo a) [a b])
